# ShugoConsoleDll

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  dllrunner.cpp  shugoconsole.cpp  shugoconsole.def  shugoconsole.hpp
.github/workflows/: main.yml
Aion-Version-Dll/: CMakeLists.txt  exports.cpp  version.cpp  version.rc
ShugoConsole/: CMakeLists.txt  cryengine_cvar.cpp  cryengine_cvar.hpp  logger.cpp  logger.hpp  memory_parser.cpp  memory_parser.hpp  shugoconsole.cpp  shugoconsole.hpp  test.cpp  win_utils.cpp  win_utils.hpp
ShugoConsole/src/: test.cpp
ShugoConsole/src/shugoconsole/: config.cpp  config.hpp  log.cpp  log.hpp  shugoconsole.cpp  shugoconsole.hpp
ShugoConsole/src/shugoconsole/cry/: cvar.cpp  cvar.hpp  memory.cpp  memory.hpp
ShugoConsole/src/shugoconsole/win/: dllmain_thread.cpp  dllmain_thread.hpp  file_monitor.cpp  file_monitor.hpp  utils.cpp  utils.hpp
libs/detours_cmake/: CMakeLists.txt
libs/outcome/: CMakeLists.txt
